services/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      labels:
        app: invidious
    spec:
      containers:
      - name: invidious
        image: quay.io/invidious/invidious:2024.07.10-bad9209-arm64
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /api/v1/comments/jNQXAC9IVRw
            port: 3000
            httpHeaders:
              - name: Host
                value: 127.0.0.1
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 10
        resources:
          limits:
            memory: 400m
            cpu: '0.01'
          requests:
            memory: 160m
            cpu: '0.005'
