services/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invidious-service
spec:
  selector:
    app: invidious
  ports:
  - port: 8080
