services/invidious/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: invidious-gateway
  namespace: invidious
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - inv.kamuridesu.com
    port:
      name: http
      number: 80
      protocol: HTTP
